CKAD/09 Managing Ingress/ingress-virtual-hosting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: first.bar.com
    http:
      paths:
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: second.foo.com
    http:
      paths:
        backend:
          service:
            name: service2
            port:
              number: 80
  - http:
      paths:
        backend:
          service:
            name: service3
            port:
              number: 80
